Closed
Bug 429172
Opened 17 years ago
Closed 17 years ago
Two carets in the browser with these steps to reproduce
Categories
(Core :: General, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.9
People
(Reporter: stevee, Assigned: roc)
References
Details
(Keywords: regression)
Attachments
(1 file)
1.12 KB,
patch
|
sicking
:
review+
sicking
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008041506 Minefield/3.0pre ID:2008041506
Sage08 from the mz forums found this.
1. new profile, start firefox
2. File > New Window
3. Left click in the address bar to highlight it
4. Enter: www.google.com
5. Press return
Expected:
- One caret, probably in the google webpage's text box
Actual:
- One caret in the address bar, one caret in the google webpage's text box
Error console reports this which might be related:
Error: Permission denied to set property XULElement.selectedIndex
Source File: http://www.google.co.uk/
Line: 2
Flags: blocking-firefox3?
Reporter | ||
Updated•17 years ago
|
Flags: blocking-firefox3?
Product: Firefox → Core
QA Contact: general → general
Reporter | ||
Updated•17 years ago
|
Flags: blocking1.9?
Comment 1•17 years ago
|
||
regressionwindow:
works in 20080410_1448_firefox-3.0pre.en-US.win32
fails in 20080410_1643_firefox-3.0pre.en-US.win32
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=PhoenixTinderbox&branch=HEAD&branchtype=match&filetype=match&whotype=match&sortby=Date&hours=2&date=explicit&mindate=1207864080&maxdate=1207870979&cvsroot=%2Fcvsroot
Bug 426987 ? (wild guess)
Comment 2•17 years ago
|
||
btw, the STR from comment #0 didn't work that wel for me.
I did:
open FF (new profile)
[File]->[New Tab]
leftclick in locationbar and type www.google.com
hit enter
result same as in comment #0
Assignee | ||
Comment 3•17 years ago
|
||
Perhaps related to bug 428840.
Assignee | ||
Comment 4•17 years ago
|
||
I wouldn't block on this but it's worth investigating.
Assignee | ||
Updated•17 years ago
|
Flags: wanted1.9+
I don't know if this is related, but sometimes I cannot select any textarea
within the browser (including the awesomebar, search, or webpage input boxes).
once I switch to a new tab and then focus the tab that is having an issue, it
works again. I don't know how to reproduce it, but if I figure it out, I'll
post steps.
This only happens in a new window, so it might be related.
I am going to set a dependency on bug 428840, as based on the post here http://forums.mozillazine.org/viewtopic.php?t=648654&start=15 the regression window appears to be the same.
This should block (I know I have no say in this) but here is another testcase where all inputs get focused wrong and you cannot type in them:
1) Open a PDF File in the browser in one window (ex: http://www.earth-policy.org/Books/PB3/pb3ch7.pdf)
2) From that PDF, in Minefield go to [File]->[New Window]
3) In that new window click on the address bar so the URL highlights (do not type anything)
4) Click in the search bar, or on an input form on the website (make google your homepage) and notice that the inputs are not working ( Google IG is my homepage, so I clicked on)
5)Try to type a URL in the awesomebar and nothing happens
This looks like a focus problem because when I highlighted text in the address bar and hit backspace, it went back a page, so the address bar did not get typing focus and it was behaving as if to go back a page.
Assignee | ||
Comment 9•17 years ago
|
||
I can reproduce with the steps in comment #0.
Reporter | ||
Comment 10•17 years ago
|
||
bug 428840 comment 22 has a tryserver build with bug 426987 backed out, and for me this fixes the two-caret issue, so I'm changing this bug's dependencies.
Comment 11•17 years ago
|
||
Confirmed, the try build fixes it for me also.
Assignee | ||
Comment 12•17 years ago
|
||
This is a weird one. Making nsDocument::SaveState call DestroyContent on its children *does not* fix the regression! So it seems to be one of the other things that nsDocument::Destroy does that's needed, but they all look innocuous to me. Experimenting.
Assignee | ||
Comment 13•17 years ago
|
||
I'm going to make this block since I can reproduce it and it should fix bug 428840 which is a blocker.
Flags: wanted1.9+
Flags: blocking1.9-
Flags: blocking1.9+
Assignee | ||
Comment 14•17 years ago
|
||
This fixes this bug. Not sure about the other one, which I find hard to reproduce --- someone could test.
It seems that we have to start returning the docshell's script-global-object as soon as nsDocumentViewer::Close is called. I'm not sure exactly why, but hopefully someone who knows this code can explain!
Assignee: nobody → roc
Status: NEW → ASSIGNED
Attachment #315882 -
Flags: superreview?(jonas)
Attachment #315882 -
Flags: review?(jonas)
Assignee | ||
Updated•17 years ago
|
Whiteboard: [needs review]
Comment 15•17 years ago
|
||
If chris (or someone ) can get a build up with that patch Robert, then I can test as I can easily reproduce both bugs.
Comment 16•17 years ago
|
||
I've made a TryServer build, should appear in a few hours under
https://build.mozilla.org/tryserver-builds/ with the tag cpearce@mozilla.com-cpearce-roc-patch
Comment 17•17 years ago
|
||
Thanks chris, will test and report back.
Comment 18•17 years ago
|
||
(In reply to comment #16)
> I've made a TryServer build, should appear in a few hours under
> https://build.mozilla.org/tryserver-builds/ with the tag
> cpearce@mozilla.com-cpearce-roc-patch
>
That test build fixes the issue I descibed in Comment 8
Comment 19•17 years ago
|
||
chris, no build with that tag has appeared on your server. Could you upload a new one only the one with a full backout is there.
Comment 20•17 years ago
|
||
Note to self:
- Open about:crashes from the bookmarks toolbar
- Middle-click to open a crash report
- Switch the tab to that page, select some text
Make sure that the correct context menu is opened, as soon as this bug is fixed.
Reporter | ||
Comment 21•17 years ago
|
||
bug 429475 has the same range as this bug and seems to be a focus issue, so may be related.
Comment on attachment 315882 [details] [diff] [review]
fix
It's a little unintuitive that things like PresShell->SaveState() and mSaveState controls what scriptglobal we use.
How about renaming SaveState to RemovedFromDocshell or some such.
r/sr=me with some better names for these things.
Attachment #315882 -
Flags: superreview?(jonas)
Attachment #315882 -
Flags: superreview+
Attachment #315882 -
Flags: review?(jonas)
Attachment #315882 -
Flags: review+
Comment 23•17 years ago
|
||
In regards to comment 16, I have been able to test the build with the patch and it works fine now for me, no paste issues either.
Assignee | ||
Comment 24•17 years ago
|
||
Comment on attachment 315882 [details] [diff] [review]
fix
Fixes nasty regressions. I will do the renaming Jonas asked for.
Attachment #315882 -
Flags: approval1.9?
Comment 25•17 years ago
|
||
Chatzilla pasting is broken, it does not appear to be the same regression window either. See comment 30 bug 428840. Robert does this patch fix that issue also?
Assignee | ||
Updated•17 years ago
|
Whiteboard: [needs review] → [needs approval]
Comment 26•17 years ago
|
||
Comment on attachment 315882 [details] [diff] [review]
fix
a1.9=beltzner
Attachment #315882 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Updated•17 years ago
|
Whiteboard: [needs approval] → [needs landing]
Assignee | ||
Comment 27•17 years ago
|
||
Checked in
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing]
Reporter | ||
Comment 28•17 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008041807 Minefield/3.0pre ID:2008041807
--> VERIFIED
Status: RESOLVED → VERIFIED
Updated•17 years ago
|
Target Milestone: --- → mozilla1.9
You need to log in
before you can comment on or make changes to this bug.
Description
•