Bug 429172. Return the docshell's script global object as soon as the document's content viewer has been Closed(). r+sr=sicking,a=beltzner