content/base/public/nsIDocument.h
@@ -97,8 +97,8 @@ class nsFrameLoader;
 
 // IID for the nsIDocument interface
 #define NS_IDOCUMENT_IID      \
-{ 0xaa79d9ba, 0x73a3, 0x42af, \
-  { 0xad, 0xb0, 0x3a, 0x57, 0xe1, 0x8d, 0xa8, 0xa2 } }
+{ 0x680f5dac, 0x8863, 0x4c80, \
+  { 0xbb, 0xe4, 0x21, 0x35, 0xbd, 0x8f, 0x83, 0x9a } }
 
 // Flag for AddStyleSheet().
 #define NS_STYLESHEET_FROM_CATALOG                (1 << 0)
@@ -789,7 +789,13 @@ public:
    */
   virtual void Destroy() = 0;
 
-  virtual void SaveState() = 0;
+  /**
+   * Notify the document that its associated ContentViewer is no longer
+   * the current viewer for the docshell. The document might still
+   * be rendered in "zombie state" until the next document is ready.
+   * The document should save form control state.
+   */
+  virtual void RemovedFromDocShell() = 0;
   
   /**
    * Get the layout history state that should be used to save and restore state
